<resources>
    <string name="app_name">Course Keeper</string>
    <string name="text_view">Text View</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="username_menu">Username</string>
    <string name="save_term_btn">Save Term</string>
    <string name="term_name_add_term">Term Name</string>
    <string name="term_start_add_term">Term Start</string>
    <string name="term_end_add_term">Term End</string>
    <string name="search">search</string>
    <string name="course_name_course_dt">Course Name</string>
    <string name="course_start_course_dt">Course Start</string>
    <string name="course_end_course_dt">Course End</string>
    <string name="course_status_course_dt">Course Status</string>
    <string name="course_notes_course_dt">Course Notes</string>
    <string name="save_course_btn">Save Course</string>
    <string name="add_instructor">Add Instructor</string>
    <string name="add_course">Add Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="update_assessment">Update Assessment</string>
    <string name="assessment_end">Assessment End</string>
    <string name="assessment_start">Assessment Start</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="assessment_detail">Assessment Detail</string>
    <string name="update_course">Update Course</string>
    <string name="related_assessments">Related Assessments</string>
    <string name="title">Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="name">Name</string>
    <string name="course">Course</string>
    <string name="updateTermBtn">Update Term</string>
    <string name="instructor_details">Instructor Details</string>
    <string name="update_instructor">Update Instructor</string>
    <string name="instructor_phone">Phone</string>
    <string name="instructor_email">Email</string>
    <string name="instructor_name">Name</string>
    <string name="report">Report</string>
    <string name="action_settings">Generate Report</string>
</resources>